Fixed collapse transition so it works on mobile

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -18,11 +18,6 @@ main {
   cursor: pointer;
 }
 
-.collapsed {
-  transition: margin-right 0.3s;
-  margin-right: -256px;
-}
-
 .controls {
   display: flex;
   align-items: center;
